# practice-cpp

./: ALGOLIST.md  CMakeLists.txt  LICENSE  README.md  algo_graph.cpp  array_values_form_triangle.cpp  binary_tree.cpp  binary_tree.h  binary_tree_app.cpp  coin_adjacency_sum.cpp  count_ways_of_sum.cpp  disc_intersections.cpp  find_missing_words.cpp  first_occurrence_of_number.cpp  format_number_into_currency.cpp  graph.cpp  graph_bfs_traversal.cpp  graph_dfs_traversal.cpp  graph_dijkstra_shortest_path.cpp  lc001_two_sum.cpp  lc015_3Sum.cpp  lc017_letter_combination_phone_number.cpp  lc020_valid_parentheses.cpp  lc021_merge_two_sorted_lists.cpp  lc026_remove_duplicates_sorted_array.cpp  lc053_maximum_subarray.cpp  lc070_climbing_stairs.cpp  lc098_is_valid_bst.cpp  lc104_maximum_depth_binary_tree.cpp  lc111_minimum_depth_binary_tree.cpp  lc118_pascal_triangle.cpp  lc121_best_time_to_buy_sell_stock_1.cpp  lc121_best_time_to_buy_sell_stocks_1.cpp  lc141_linked_list_cycle.cpp  lc204_count_primes.cpp  lc206_reverse_linked_list.cpp  lc235_lowest_common_ancestor_bst.cpp  lc236_lowest_common_ancestor_binary_tree.cpp  lc322_coin_change.cpp  lc387_first_unique_character.cpp  (+14 more)
codility/: CMakeLists.txt  braces_balanced.cpp  coin_adjacency.cpp  equilibrium_index.cpp  l02_cyclic_rotation.cpp  l02_odd_occurrence.cpp  l03_frog_jump.cpp  l03_missing_element.cpp  l03_tape_equilibrium.cpp  l04_frog_river_one.cpp  l04_max_counters.cpp  l04_missing_integer.cpp  l04_permcheck.cpp  l05_count_divisibles.cpp  l05_genomic_range_query.cpp  l05_min_avg_two_slice.cpp  l05_passing_cars.cpp  l06_can_form_triangle.cpp  l06_disc_intersections.cpp  l06_distinct_values.cpp  l06_max_triplet_product.cpp  l07_braces_match.cpp  l07_fish_alive.cpp  l07_stonewall.cpp  l08_dominator.cpp  l08_equileader.cpp  l091_max_slice_sum.cpp  l092_max_profit.cpp  l093_max_double_slice_sum.cpp  l111_semiprimes.cpp  l112_count_nondivisors.cpp  l121_chocolates.cpp  l122_common_prime_divisors.cpp  l132_ladder.cpp  l13_fibonacci_frog.cpp  l142_count_nails.cpp  l151_num_triangles.cpp  l151_number_solitaire.cpp  l152_num_abs_distinct.cpp  l153_num_distinct_slices.cpp  (+8 more)
collection/: string_tokenization.c
essential/: CMakeLists.txt  algo_trie.cpp  trie.cpp
include/: binary_tree.h  graph.h  linked_list.h  trie.h
leetcode/: CMakeLists.txt  lc002_add_two_numbers.cpp  lc003_longest_substring_without_repeating_characters.cpp  lc004_median_two_sorted_arrays.cpp  lc007_reverse_integer.cpp  lc008_string_to_integer.cpp  lc011_container_with_most_water.cpp  lc021_merge_two_sorted_lists.cpp  lc023_merge_k_sorted_lists.cpp  lc042_trapping_rain_water.cpp  lc053_maximum_subarray.cpp  lc056_merge_intervals.cpp  lc070_climbing_stairs.cpp  lc088_merge_sorted_array.cpp  lc121_best_time_to_buy_sell_stock_1.cpp  lc122_best_time_to_buy_sell_stock_2.cpp  lc146_lru_cache.cpp  lc200_number_of_islands.cpp  lc206_reverse_linked_list.cpp  lc230_kth_smallest_element_in_bst.cpp  lc242_valid_anagram.cpp  lc322_coin_change.cpp  lc344_reverse_string.cpp  lc628_maximum_product_three_numbers.cpp  lc722_remove_comments.cpp  lc929_unique_email.cpp
problems/: CMakeLists.txt  average_of_groups.cpp  find_missing_words.cpp  first_unique_number.cpp  format_number_into_currency.cpp  k_max_pair_combinations.cpp  length_of_longest_subsequence_with_given_sum.cpp  prefix_sum_matrix.cpp  reverse_sentence.cpp  weighted_job_scheduling.cpp
