# Codility
add_executable(codl01 l01_max_binary_gap.cpp)
add_executable(codl021 l02_cyclic_rotation.cpp)
add_executable(codl022 l02_odd_occurrence.cpp)
add_executable(codl031 l03_missing_element.cpp)
add_executable(codl032 l03_frog_jump.cpp)
add_executable(codl033 l03_tape_equilibrium.cpp)
add_executable(codl041 l04_permcheck.cpp)
add_executable(codl042 l04_frog_river_one.cpp)
add_executable(codl043 l04_max_counters.cpp)
add_executable(codl044 l04_missing_integer.cpp)
add_executable(codl051 l05_passing_cars.cpp)
add_executable(codl052 l05_genomic_range_query.cpp)
add_executable(codl053 l05_min_avg_two_slice.cpp)
add_executable(codl054 l05_count_divisibles.cpp)
add_executable(codl061 l06_distinct_values.cpp)
add_executable(codl062 l06_max_triplet_product.cpp)
add_executable(codl063 l06_can_form_triangle.cpp)
add_executable(codl064 l06_disc_intersections.cpp)
add_executable(codl071 l07_braces_match.cpp)
add_executable(codl072 l07_fish_alive.cpp)
add_executable(codl073 braces_balanced.cpp)
add_executable(codl074 l07_stonewall.cpp)
add_executable(codl081 l08_equileader.cpp)
add_executable(codl082 l08_dominator.cpp)

add_executable(codl091 l091_max_slice_sum.cpp)
add_executable(codl092 l092_max_profit.cpp)
add_executable(codl093 l093_max_double_slice_sum.cpp)

add_executable(codl131 l13_fibonacci_frog.cpp)
add_executable(codl132 l13_ladder.cpp)

add_executable(codl151 l151_number_solitaire.cpp)
#add_executable(codl152 l152_min_abs_sum.cpp)

add_executable(cod_ocr ocr_similar.cpp)
add_executable(cod_equibindx equilibrium_index.cpp)
add_executable(cod_leadsort leader_sorted_array.cpp)
add_executable(cod_wordmac word_machine.cpp)
add_executable(cod_sortone sort_one_swap.cpp)
add_executable(cod_coinadj coin_adjacency.cpp)