# LeetCode
add_executable(lc443 lc443_string_compression.cpp)
add_executable(lc118 lc118_pascal_triangle.cpp)
add_executable(lc722 lc722_remove_comments.cpp)
add_executable(lc070 lc070_climbing_stairs.cpp)
add_executable(lc001 lc001_two_sum.cpp)
add_executable(lc200 lc200_number_of_islands.cpp)
add_executable(lc657 lc657_robot_return_origin.cpp)
add_executable(lc015 lc015_3Sum.cpp)
add_executable(lc004 lc004_median_two_sorted_arrays.cpp)
add_executable(lc008 lc008_string_to_integer.cpp)
add_executable(lc011 lc011_container_with_most_water.cpp)
add_executable(lc461 lc461_hamming_distance.cpp)
add_executable(lc344 lc344_reverse_string.cpp)
add_executable(lc412 lc412_fizz_buzz.cpp)
add_executable(lc206 lc206_reverse_linked_list.cpp)
add_executable(lc122 lc122_best_time_to_buy_sell_stock_2.cpp)
add_executable(lc242 lc242_valid_anagram.cpp)
add_executable(lc121 lc121_best_time_to_buy_sell_stock_1.cpp)
add_executable(lc141 lc141_linked_list_cycle.cpp)
add_executable(lc204 lc204_count_primes.cpp)
add_executable(lc053 lc053_maximum_subarray.cpp)
add_executable(lc387 lc387_first_unique_character.cpp)
add_executable(lc441 lc441_arranging_coins.cpp)
add_executable(lc020 lc020_valid_parentheses.cpp)
add_executable(lc941 lc941_valid_mountain_array.cpp)
add_executable(lc017 lc017_letter_combination_phone_number.cpp)
add_executable(lc322 lc322_coin_change.cpp)
add_executable(lc007 lc007_reverse_integer.cpp)
add_executable(lc088 lc088_merge_sorted_array.cpp)
add_executable(lc021 lc021_merge_two_sorted_lists.cpp)
add_executable(lc026 lc026_remove_duplicates_sorted_array.cpp)
add_executable(lc582 lc582_kill_process.cpp)
add_executable(lc692 lc692_top_k_frequent_words.cpp)
add_executable(lc628 lc628_maximum_product_three_numbers.cpp)
add_executable(lc042 lc042_trapping_rain_water.cpp)
add_executable(lc929 lc929_unique_email.cpp)
add_executable(lc146 lc146_lru_cache.cpp)
add_executable(lc002 lc002_add_two_numbers_given_as_linked_list.cpp)
add_executable(lc003 lc003_longest_substring_without_repeating_characters.cpp)
add_executable(lc056 lc056_merge_intervals.cpp)

add_executable(lc111 lc111_minimum_depth_binary_tree.cpp)
target_link_libraries(lc111 libbt)

add_executable(lc104 lc104_maximum_depth_binary_tree.cpp)
target_link_libraries(lc104 libbt)

add_executable(lc098 lc098_is_valid_bst.cpp)
target_link_libraries(lc098 libbt)

add_executable(lc236 lc236_lowest_common_ancestor_binary_tree.cpp)
target_link_libraries(lc236 libbt)

add_executable(lc235 lc235_lowest_common_ancestor_bst.cpp)
target_link_libraries(lc235 libbt)

add_executable(lc230 lc230_kth_smallest_element_in_bst.cpp)
target_link_libraries(lc230 libbt)