add_executable(wtjbsched weighted_job_scheduling.cpp)
add_executable(formatnum format_number_into_currency.cpp)
add_executable(revsent reverse_sentence.cpp)
add_executable(wayssum count_ways_of_sum.cpp)
add_executable(avggroup average_of_groups.cpp)
add_executable(firstoccr first_occurrence_of_number.cpp)
add_executable(missingwrd find_missing_words.cpp)
add_executable(firstunique first_unique_number.cpp)
add_executable(lexiorder lexicographic_ordering_numbers.cpp)
add_executable(longsubseq length_of_longest_subsequence_with_given_sum.cpp)
add_executable(prefixsum2d prefix_sum_matrix.cpp)